--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,16 @@
-.App {
-  text-align: center;
+.Pane1{
+  background-color: #00B050;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-brand .img-profile {
+  max-width: 10rem;
+  max-height: 10rem;
+  border: 0.5rem solid rgba(255, 255, 255, 0.2);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+.navbar-dark .navbar-nav .nav-link {
+  display: block;
+  color: rgba(255,255,255,.5);
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 @keyframes App-logo-spin {
